# MyICP

./: CMakeLists.txt  README.md  main.cpp  readme.txt
data/: bunny1.pcd  bunny2.pcd  skeleton.pcd
include/: myicp.h  myicp_helpers.h
src/: myicp.cpp  myicp_helpers.cpp
